# gcn10

./: .gitignore  CITATION.cff  README.md
archive/: README.md
archive/arcs/: arc_conversion.qmd
archive/gee/: README.md
archive/hybrid/: CMakeLists.txt  config.c  global.h  log.c  raster.c
archive/python/: generate_cn_serial.py
conda/: README.md
conda/recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
hsg/: readme.txt
paper/: paper.bib  paper.md
programs/scs-cn-method/hybrid/: global.h  main.c  raster.c  runoff.c  scs_runoff_mpi
programs/scs-cn-method/inter-block-mpi/: main.c  raster.c
programs/scs-cn-method/intra-block-openmp/: global.h  main.c  raster.c  raster.c.bak  raster.c.bak2  readme.md  runoff.c  runoff.c.bak
programs/scs-cn-method/ompbak/: Makefile  global.h  main.c  raster.c  readme.md
programs/scs-cn-method/working_scripts/: #main.c#  dependencies.txt
programs/scs-cn-method/working_scripts/meshed-master/: Makefile
programs/scs-cn-method/working_scripts/meshed-master/test/: pretest_TX.sh
programs/serial-cn-processing/: generate_curve_number.py
scripts/: generate_curve_number.py
scripts/arcs/: arc_conversion.html  arc_conversion.tex
scripts/arcs/arc_conversion_files/libs/bootstrap/: bootstrap.min.css
scripts/parallel-cn-processing/: generate_cn_parallel.py
scripts/scs-cn-method/: README.md  header.h  scs_runoff
scripts/scs-cn-method/hcho/: main.c  runoff.c
scripts/scs-cn-method/inter-block-mpi/: global.h  scs_runoff_mpi
scripts/scs-cn-method/working_scripts/: main.c.bak  raster.c  scs_runoff
scripts/scs-cn-method/working_scripts/meshed-master/: delineate_funcs.h  main.c.bak  outlet_list.c
scripts/scs-cn-method/working_scripts/meshed-master/test/: pretest_TX.bat  test_TX.bat  test_TX.sh
src/: CMakeLists.txt  cn.c  compat.h  global.h  log.c  main.c  raster.c
src/c/: CMakeLists.txt  Makefile  cn.c  config.c  global.h  log.c  main.c  raster.c
src/c/hybrid/: Makefile  cn.c  config.c  config.txt  global.h  log.c  main.c
src/c/mpi/: CMakeLists.txt  cn.c  config.c  config.txt  global.h  log.c  main.c  raster.c
src/c/mpi/test/: blocks.txt  config.txt  run_test.py
src/gee/: basic_workflow.js  gcn10_generator.js
src/python/: README.md  generate_cn_parallel.py  generate_cn_serial.py
src/scs-cn-method/: Makefile  rasterio.c
src/scs-cn-method/hcho/: Makefile  raster.c
src/scs-cn-method/inter-block-mpi/: Makefile  main.c  runoff.c
src/scs-cn-method/intra-block-openmp/: Makefile  global.h  main.c  raster.c
src/scs-cn-method/intra-block-openmp/dep/: parallel_raster_io.c
src/scs-cn-method/working_scripts/: Makefile  Makefile.bak  header.h  main.c  make.log.txt  raster.c.bak
src/scs-cn-method/working_scripts/meshed-master/: README.md  global.h  hierarchy.c  outlets.c  raster.c
src/scs-cn-method/working_scripts/serial/: Makefile  header.h  main.c  rasterio.c
src/test/: config.txt
validation/: clip_cn_to_watersheds.py  readme.md
